Fix margin collapse

--- a/src/Components/Cards/Cards.scss
+++ b/src/Components/Cards/Cards.scss
@@ -11,7 +11,7 @@
         @include small {
             width: 90%;
             background-color: white;
-            margin-top: 10px;
+            margin-top: 0px;
         }
 
         @include medium {
