--- a/src/Components/Collapse/Collapse.scss
+++ b/src/Components/Collapse/Collapse.scss
@@ -8,7 +8,7 @@
     margin: 40px 0px;
     width: 100%;
     @include small {
-      margin: 0px;
+      margin: 10px;
     }
   }
   
